[project]
name = "brypymods"
version = "00.00.01"
authors = [
    {name="Bryan Sample", email="bryanjsample@gmail.com"}
]
description = "A package of my personal modules."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS"
]

[project.urls]
Homepage = "https://github.com/bryanjsample/mypymods"

[project.scripts]
ofs = "file_manipulation.commands:open_items"
sfs = "file_manipulation.commands:sort_items"
mfs = "file_manipulation.commands:move_items"
mscr = "file_manipulation.commands:move_screenshots"
convmd = "file_manipulation.commands:convert_md_to_pdf"

[build-system]
requires = ["setuptools", "getch"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]